updated sql that pulls from agg_ergot_samples"

--- a/src/WeatherStation/hlyDataVisualization.ipynb
+++ b/src/WeatherStation/hlyDataVisualization.ipynb
@@ -101,14 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergotQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT year, district, percnt_true, has_ergot, sum_severity, present_prev1, present_prev2, present_prev3, present_in_neighbor, severity_prev1, \n",
-    "        severity_prev2, severity_prev3, severity_in_neighbor FROM public.agg_ergot_samples\n",
-    "    GROUP BY year, district, percnt_true, has_ergot, sum_severity, present_prev1, present_prev2, present_prev3, present_in_neighbor, severity_prev1, \n",
-    "        severity_prev2, severity_prev3, severity_in_neighbor;\n",
-    "    \"\"\"\n",
-    ")\n",
+    "ergotQuery = sq.text(\"SELECT * FROM public.agg_ergot_samples\")\n",
     "\n",
     "ergotDF = pd.read_sql_query(ergotQuery, conn)"
    ]
