--- a/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
@@ -143,7 +143,8 @@
     "    corr,\n",
     "    mask=mask,\n",
     "    cmap=cmap,\n",
-    "    vmax=1.0,\n",
+    "    vmax=0.5,\n",
+    "    vmin=-0.5,\n",
     "    center=0,\n",
     "    square=True,\n",
     "    linewidths=0.5,\n",
