--- a/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
@@ -81,6 +81,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ab_df = moistureDF.loc[moistureDF[\"district\"] >= 4800]\n",
+    "sk_df = moistureDF.loc[\n",
+    "    (moistureDF[\"district\"] >= 4700) | (moistureDF[\"district\"] < 4800)\n",
+    "]\n",
+    "mb_df = moistureDF.loc[moistureDF[\"district\"] < 4700]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db.cleanup()"
    ]
   },
@@ -160,6 +173,35 @@
    "source": [
     "sns.pairplot(final_df)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Soil Moisture (m^3/m^3)\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(sk_df[\"soil_moisture_min\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.hist(ab_df[\"soil_moisture_min\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"soil_moisture_min\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(sk_df[\"soil_moisture_mean\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.hist(ab_df[\"soil_moisture_mean\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"soil_moisture_mean\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(sk_df[\"soil_moisture_max\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.hist(ab_df[\"soil_moisture_max\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"soil_moisture_max\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
    ]
   }
  ],
