added new ergot features

--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -131,16 +131,38 @@
     "                \"district\": district,\n",
     "                \"percnt_true\": currSamples[\"incidence\"].sum() / len(currSamples),\n",
     "                \"has_ergot\": currSamples[\"incidence\"].sum() > 0,\n",
+    "                \"median_severity\": currSamples[\"severity\"].median(),\n",
     "                \"sum_severity\": currSamples[\"severity\"].sum(),\n",
+    "                \"over20%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
+    "                > 0.2,\n",
+    "                \"over40%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
+    "                > 0.4,\n",
+    "                \"over60%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
+    "                > 0.6,\n",
+    "                \"over80%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
+    "                > 0.8,\n",
+    "                \"over100%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
+    "                > 1,\n",
+    "                \"numOver20%Severity\": len(currSamples[currSamples[\"severity\"] > 0.2]),\n",
+    "                \"numOver40%Severity\": len(currSamples[currSamples[\"severity\"] > 0.4]),\n",
+    "                \"numOver60%Severity\": len(currSamples[currSamples[\"severity\"] > 0.6]),\n",
+    "                \"numOver80%Severity\": len(currSamples[currSamples[\"severity\"] > 0.8]),\n",
+    "                \"numOver100%Severity\": len(currSamples[currSamples[\"severity\"] > 1]),\n",
+    "                \"present_in_neighbor\": neighborSamples[\"incidence\"].sum() > 0,\n",
+    "                \"sum_severity_in_neighbor\": neighborSamples[\"incidence\"].sum()\n",
+    "                / len(neighborSamples),\n",
     "                \"present_prev1\": prev1Year[\"incidence\"].sum() > 0,\n",
     "                \"present_prev2\": prev2Year[\"incidence\"].sum() > 0,\n",
     "                \"present_prev3\": prev3Year[\"incidence\"].sum() > 0,\n",
-    "                \"present_in_neighbor\": neighborSamples[\"incidence\"].sum() > 0,\n",
-    "                \"severity_prev1\": prev1Year[\"incidence\"].sum() / len(prev1Year),\n",
-    "                \"severity_prev2\": prev2Year[\"incidence\"].sum() / len(prev2Year),\n",
-    "                \"severity_prev3\": prev3Year[\"incidence\"].sum() / len(prev3Year),\n",
-    "                \"severity_in_neighbor\": neighborSamples[\"incidence\"].sum()\n",
-    "                / len(neighborSamples),\n",
+    "                \"sum_severity_prev1\": prev1Year[\"incidence\"].sum() / len(prev1Year),\n",
+    "                \"sum_severity_prev2\": prev2Year[\"incidence\"].sum() / len(prev2Year),\n",
+    "                \"sum_severity_prev3\": prev3Year[\"incidence\"].sum() / len(prev3Year),\n",
+    "                \"percnt_true_prev1\": prev1Year[\"incidence\"].sum() / len(prev1Year),\n",
+    "                \"percnt_true_prev2\": prev2Year[\"incidence\"].sum() / len(prev2Year),\n",
+    "                \"percnt_true_prev3\": prev3Year[\"incidence\"].sum() / len(prev3Year),\n",
+    "                \"median_prev1\": prev1Year[\"severity\"].median(),\n",
+    "                \"median_prev2\": prev2Year[\"severity\"].median(),\n",
+    "                \"median_prev3\": prev3Year[\"severity\"].median(),\n",
     "            }\n",
     "\n",
     "            ergotList.append(currEntry)\n",
@@ -167,20 +189,44 @@
     "    query = sq.text(\n",
     "        f\"\"\"\n",
     "        CREATE TABLE {TABLENAME} (\n",
-    "            year                    INT,\n",
-    "            district                INT,\n",
-    "            percnt_true             FLOAT, \n",
-    "            has_ergot               BOOL, \n",
-    "            sum_severity            FLOAT, \n",
-    "            present_prev1           BOOL, \n",
-    "            present_prev2           BOOL, \n",
-    "            present_prev3           BOOL, \n",
-    "            present_in_neighbor     BOOL, \n",
-    "            severity_prev1          FLOAT, \n",
-    "            severity_prev2          FLOAT, \n",
-    "            severity_prev3          FLOAT, \n",
-    "            severity_in_neighbor    FLOAT,\n",
+    "            year                        INT,\n",
+    "            district                    INT,\n",
+    "            percnt_true                 FLOAT, \n",
+    "            has_ergot                   BOOL, \n",
+    "            median_severity             FLOAT,\n",
+    "            sum_severity                FLOAT, \n",
     "\n",
+    "            over_20%_present            BOOL,\n",
+    "            over_40%_present            BOOL,\n",
+    "            over_60%_present            BOOL,\n",
+    "            over_80%_present            BOOL,\n",
+    "            over_100%_present           BOOL,        \n",
+    "\n",
+    "            num_over_20%_severity       FLOAT,\n",
+    "            num_over_40%_severity       FLOAT,\n",
+    "            num_over_60%_severity       FLOAT,\n",
+    "            num_over_80%_severity       FLOAT,\n",
+    "            num_over_100%_severity      FLOAT,\n",
+    "\n",
+    "            present_in_neighbor         BOOL, \n",
+    "            sum_severity_in_neighbor    FLOAT,\n",
+    "\n",
+    "            present_prev1               BOOL, \n",
+    "            present_prev2               BOOL, \n",
+    "            present_prev3               BOOL, \n",
+    "            \n",
+    "            sum_severity_prev1          FLOAT, \n",
+    "            sum_severity_prev2          FLOAT, \n",
+    "            sum_severity_prev3          FLOAT, \n",
+    "            \n",
+    "            percnt_true_prev1           FLOAT,\n",
+    "            percnt_true_prev2           FLOAT,\n",
+    "            percnt_true_prev3           FLOAT,\n",
+    "\n",
+    "            median_prev1                FLOAT,\n",
+    "            median_prev2                FLOAT,\n",
+    "            median_prev3                FLOAT,\n",
+    "            \n",
     "            CONSTRAINT PK_agg_ergot_sample PRIMARY KEY(year, district)\n",
     "        );\n",
     "        COMMIT;\n",
