updated engineered features
updated engineered features

--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
     "import pandas as pd  # type: ignore\n",
-    "from dotenv import load_dotenv\n",
+    "import numpy as np\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -133,21 +134,6 @@
     "                \"has_ergot\": currSamples[\"incidence\"].sum() > 0,\n",
     "                \"median_severity\": currSamples[\"severity\"].median(),\n",
     "                \"sum_severity\": currSamples[\"severity\"].sum(),\n",
-    "                \"over20%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
-    "                > 0.2,\n",
-    "                \"over40%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
-    "                > 0.4,\n",
-    "                \"over60%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
-    "                > 0.6,\n",
-    "                \"over80%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
-    "                > 0.8,\n",
-    "                \"over100%Present\": (currSamples[\"incidence\"].sum() / len(currSamples))\n",
-    "                > 1,\n",
-    "                \"numOver20%Severity\": len(currSamples[currSamples[\"severity\"] > 0.2]),\n",
-    "                \"numOver40%Severity\": len(currSamples[currSamples[\"severity\"] > 0.4]),\n",
-    "                \"numOver60%Severity\": len(currSamples[currSamples[\"severity\"] > 0.6]),\n",
-    "                \"numOver80%Severity\": len(currSamples[currSamples[\"severity\"] > 0.8]),\n",
-    "                \"numOver100%Severity\": len(currSamples[currSamples[\"severity\"] > 1]),\n",
     "                \"present_in_neighbor\": neighborSamples[\"incidence\"].sum() > 0,\n",
     "                \"sum_severity_in_neighbor\": neighborSamples[\"incidence\"].sum()\n",
     "                / len(neighborSamples),\n",
@@ -176,6 +162,57 @@
     "    aggErgot.loc[aggErgot[\"severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
     "    aggErgot.loc[aggErgot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
     "\n",
+    "    # bin ergot_present and sum_severity by IQR\n",
+    "    q1_ergot_present_cutoff = np.percentile(ergot.percnt_true, 25)\n",
+    "    q2_ergot_present_cutoff = np.percentile(ergot.percnt_true, 50)\n",
+    "    q3_ergot_present_cutoff = np.percentile(ergot.percnt_true, 75)\n",
+    "    q4_ergot_present_cutoff = np.percentile(ergot.percnt_true, 100)\n",
+    "\n",
+    "    q1_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 25)\n",
+    "    q2_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 50)\n",
+    "    q3_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 75)\n",
+    "    q4_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 100)\n",
+    "\n",
+    "    aggErgot[\"ergot_present_in_q1\"] = False\n",
+    "    aggErgot[\"ergot_present_in_q2\"] = False\n",
+    "    aggErgot[\"ergot_present_in_q3\"] = False\n",
+    "    aggErgot[\"ergot_present_in_q4\"] = False\n",
+    "\n",
+    "    aggErgot[\"sum_severity_in_q1\"] = False\n",
+    "    aggErgot[\"sum_severity_in_q2\"] = False\n",
+    "    aggErgot[\"sum_severity_in_q3\"] = False\n",
+    "    aggErgot[\"sum_severity_in_q4\"] = False\n",
+    "\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"percnt_true\"] <= q1_ergot_present_cutoff, \"ergot_present_in_q1\"\n",
+    "    ] = True\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"percnt_true\"] <= q2_ergot_present_cutoff, \"ergot_present_in_q2\"\n",
+    "    ] = True\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"percnt_true\"] <= q3_ergot_present_cutoff, \"ergot_present_in_q3\"\n",
+    "    ] = True\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"percnt_true\"] <= q4_ergot_present_cutoff, \"ergot_present_in_q4\"\n",
+    "    ] = True\n",
+    "\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"sum_severity\"] <= q1_sum_severity_severity_cutoff,\n",
+    "        \"sum_severity_in_q1\",\n",
+    "    ] = True\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"sum_severity\"] <= q2_sum_severity_severity_cutoff,\n",
+    "        \"sum_severity_in_q2\",\n",
+    "    ] = True\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"sum_severity\"] <= q3_sum_severity_severity_cutoff,\n",
+    "        \"sum_severity_in_q3\",\n",
+    "    ] = True\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"sum_severity\"] <= q4_sum_severity_severity_cutoff,\n",
+    "        \"sum_severity_in_q4\",\n",
+    "    ] = True\n",
+    "\n",
     "    return aggErgot"
    ]
   },
@@ -196,18 +233,6 @@
     "            median_severity             FLOAT,\n",
     "            sum_severity                FLOAT, \n",
     "\n",
-    "            over_20%_present            BOOL,\n",
-    "            over_40%_present            BOOL,\n",
-    "            over_60%_present            BOOL,\n",
-    "            over_80%_present            BOOL,\n",
-    "            over_100%_present           BOOL,        \n",
-    "\n",
-    "            num_over_20%_severity       FLOAT,\n",
-    "            num_over_40%_severity       FLOAT,\n",
-    "            num_over_60%_severity       FLOAT,\n",
-    "            num_over_80%_severity       FLOAT,\n",
-    "            num_over_100%_severity      FLOAT,\n",
-    "\n",
     "            present_in_neighbor         BOOL, \n",
     "            sum_severity_in_neighbor    FLOAT,\n",
     "\n",
@@ -227,6 +252,16 @@
     "            median_prev2                FLOAT,\n",
     "            median_prev3                FLOAT,\n",
     "            \n",
+    "            ergot_present_in_q1         BOOL,\n",
+    "            ergot_present_in_q2         BOOL,\n",
+    "            ergot_present_in_q3         BOOL,\n",
+    "            ergot_present_in_q4         BOOL,     \n",
+    "\n",
+    "            sum_severity_in_q1          BOOL,\n",
+    "            sum_severity_in_q2          BOOL,\n",
+    "            sum_severity_in_q3          BOOL,\n",
+    "            sum_severity_in_q4          BOOL,\n",
+    "\n",
     "            CONSTRAINT PK_agg_ergot_sample PRIMARY KEY(year, district)\n",
     "        );\n",
     "        COMMIT;\n",
