binned column names are now more consistant

--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -252,10 +252,10 @@
     "            median_prev2                FLOAT,\n",
     "            median_prev3                FLOAT,\n",
     "            \n",
-    "            ergot_present_in_q1         BOOL,\n",
-    "            ergot_present_in_q2         BOOL,\n",
-    "            ergot_present_in_q3         BOOL,\n",
-    "            ergot_present_in_q4         BOOL,     \n",
+    "            percnt_true_in_q1           BOOL,\n",
+    "            percnt_true_in_q1           BOOL,\n",
+    "            percnt_true_in_q1           BOOL,\n",
+    "            percnt_true_in_q1           BOOL,     \n",
     "\n",
     "            sum_severity_in_q1          BOOL,\n",
     "            sum_severity_in_q2          BOOL,\n",
