fixed conditions for binning

--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -166,12 +166,10 @@
     "    q1_ergot_present_cutoff = np.percentile(ergot.percnt_true, 25)\n",
     "    q2_ergot_present_cutoff = np.percentile(ergot.percnt_true, 50)\n",
     "    q3_ergot_present_cutoff = np.percentile(ergot.percnt_true, 75)\n",
-    "    q4_ergot_present_cutoff = np.percentile(ergot.percnt_true, 100)\n",
     "\n",
     "    q1_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 25)\n",
     "    q2_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 50)\n",
     "    q3_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 75)\n",
-    "    q4_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 100)\n",
     "\n",
     "    aggErgot[\"ergot_present_in_q1\"] = False\n",
     "    aggErgot[\"ergot_present_in_q2\"] = False\n",
@@ -187,13 +185,17 @@
     "        aggErgot[\"percnt_true\"] <= q1_ergot_present_cutoff, \"ergot_present_in_q1\"\n",
     "    ] = True\n",
     "    aggErgot.loc[\n",
-    "        aggErgot[\"percnt_true\"] <= q2_ergot_present_cutoff, \"ergot_present_in_q2\"\n",
+    "        (aggErgot[\"percnt_true\"] > q1_ergot_present_cutoff)\n",
+    "        & (aggErgot[\"percnt_true\"] <= q2_ergot_present_cutoff),\n",
+    "        \"ergot_present_in_q2\",\n",
     "    ] = True\n",
     "    aggErgot.loc[\n",
-    "        aggErgot[\"percnt_true\"] <= q3_ergot_present_cutoff, \"ergot_present_in_q3\"\n",
+    "        (aggErgot[\"percnt_true\"] > q2_ergot_present_cutoff)\n",
+    "        & (aggErgot[\"percnt_true\"] <= q3_ergot_present_cutoff),\n",
+    "        \"ergot_present_in_q3\",\n",
     "    ] = True\n",
     "    aggErgot.loc[\n",
-    "        aggErgot[\"percnt_true\"] <= q4_ergot_present_cutoff, \"ergot_present_in_q4\"\n",
+    "        aggErgot[\"percnt_true\"] > q3_ergot_present_cutoff, \"ergot_present_in_q4\"\n",
     "    ] = True\n",
     "\n",
     "    aggErgot.loc[\n",
@@ -201,15 +203,17 @@
     "        \"sum_severity_in_q1\",\n",
     "    ] = True\n",
     "    aggErgot.loc[\n",
-    "        aggErgot[\"sum_severity\"] <= q2_sum_severity_severity_cutoff,\n",
+    "        (aggErgot[\"sum_severity\"] > q1_ergot_present_cutoff)\n",
+    "        & (aggErgot[\"sum_severity\"] <= q2_ergot_present_cutoff),\n",
     "        \"sum_severity_in_q2\",\n",
     "    ] = True\n",
     "    aggErgot.loc[\n",
-    "        aggErgot[\"sum_severity\"] <= q3_sum_severity_severity_cutoff,\n",
+    "        (aggErgot[\"sum_severity\"] > q2_ergot_present_cutoff)\n",
+    "        & (aggErgot[\"sum_severity\"] <= q3_ergot_present_cutoff),\n",
     "        \"sum_severity_in_q3\",\n",
     "    ] = True\n",
     "    aggErgot.loc[\n",
-    "        aggErgot[\"sum_severity\"] <= q4_sum_severity_severity_cutoff,\n",
+    "        aggErgot[\"sum_severity\"] > q3_sum_severity_severity_cutoff,\n",
     "        \"sum_severity_in_q4\",\n",
     "    ] = True\n",
     "\n",
