--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TABLENAME = \"agg_ergot_samples\"\n",
+    "TABLENAME = \"agg_ergot_sample\"\n",
     "\n",
     "load_dotenv()\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
@@ -157,19 +157,19 @@
     "\n",
     "    # set any unexpected values to 0\n",
     "    aggErgot.loc[aggErgot[\"percnt_true\"].isna(), \"percnt_true\"] = 0\n",
-    "    aggErgot.loc[aggErgot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
-    "    aggErgot.loc[aggErgot[\"severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
-    "    aggErgot.loc[aggErgot[\"severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
-    "    aggErgot.loc[aggErgot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"sum_severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"sum_severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"sum_severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"sum_severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
     "\n",
     "    # bin ergot_present and sum_severity by IQR\n",
-    "    q1_ergot_present_cutoff = np.percentile(ergot.percnt_true, 25)\n",
-    "    q2_ergot_present_cutoff = np.percentile(ergot.percnt_true, 50)\n",
-    "    q3_ergot_present_cutoff = np.percentile(ergot.percnt_true, 75)\n",
+    "    q1_ergot_present_cutoff = np.percentile(aggErgot.percnt_true, 25)\n",
+    "    q2_ergot_present_cutoff = np.percentile(aggErgot.percnt_true, 50)\n",
+    "    q3_ergot_present_cutoff = np.percentile(aggErgot.percnt_true, 75)\n",
     "\n",
-    "    q1_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 25)\n",
-    "    q2_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 50)\n",
-    "    q3_sum_severity_severity_cutoff = np.percentile(ergot.percnt_true, 75)\n",
+    "    q1_sum_severity_severity_cutoff = np.percentile(aggErgot.sum_severity, 25)\n",
+    "    q2_sum_severity_severity_cutoff = np.percentile(aggErgot.sum_severity, 50)\n",
+    "    q3_sum_severity_severity_cutoff = np.percentile(aggErgot.sum_severity, 75)\n",
     "\n",
     "    aggErgot[\"ergot_present_in_q1\"] = False\n",
     "    aggErgot[\"ergot_present_in_q2\"] = False\n",
