--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -160,7 +160,9 @@
     "    aggErgot.loc[aggErgot[\"sum_severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
     "    aggErgot.loc[aggErgot[\"sum_severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
     "    aggErgot.loc[aggErgot[\"sum_severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
-    "    aggErgot.loc[aggErgot[\"sum_severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
+    "    aggErgot.loc[\n",
+    "        aggErgot[\"sum_severity_in_neighbor\"].isna(), \"severity_in_neighbor\"\n",
+    "    ] = 0\n",
     "\n",
     "    # bin ergot_present and sum_severity by IQR\n",
     "    q1_ergot_present_cutoff = np.percentile(aggErgot.percnt_true, 25)\n",
