--- a/src/Models/DataCreation.ipynb
+++ b/src/Models/DataCreation.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v1 = getDatasetV1()\n",
+    "m = [\"01\", \"02\", \"03\", \"04\"]\n",
+    "dataset_v1 = getDatasetV1(None)\n",
     "dataset_v1"
    ]
   },
@@ -64,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2 = getDatasetV2()\n",
+    "dataset_v2 = getDatasetV2(m)\n",
     "dataset_v2"
    ]
   }
