--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -18,7 +18,7 @@
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService\n",
     "\n",
-    "from Datasets.DataCreation import getDatasetV1, getWeatherData_v1, getDatasetV2"
+    "from Datasets.DataCreation import getDatasetV1, getWeatherData_v1, getDatasetV2, getSoilData, getDatasetV3"
    ]
   },
   {
@@ -67,6 +67,16 @@
    "source": [
     "dataset_v2 = getDatasetV2(m)\n",
     "dataset_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v3 = getDatasetV3()\n",
+    "v3"
    ]
   }
  ],
