commenting and linters

--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -18,7 +18,13 @@
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService\n",
     "\n",
-    "from Datasets.DataCreation import getDatasetV1, getWeatherData_v1, getDatasetV2, getSoilData, getDatasetV3"
+    "from Datasets.DataCreation import (\n",
+    "    getDatasetV1,\n",
+    "    getWeatherData_v1,\n",
+    "    getDatasetV2,\n",
+    "    getSoilData,\n",
+    "    getDatasetV3,\n",
+    ")"
    ]
   },
   {
