attempting to satisfy linters

--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import xarray as xr\n",
+    "import xarray as xr  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import sys\n",
     "\n",
     "\n",
