--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -34,7 +34,7 @@
     "import sys\n",
     "import pandas as pd  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import black\n",
     "import jupyter_black as bl  # type: ignore\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
