--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -10,7 +10,7 @@
     "from matplotlib import cm, colors  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import pandas as pd  # type: ignore\n",
     "import numpy as np\n",
     "import os, sys\n",
