--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
