--- a/src/Ergot/importErgot.ipynb
+++ b/src/Ergot/importErgot.ipynb
@@ -26,7 +26,7 @@
     "from ErgotQueryBuilder import ErgotQueryBuilder\n",
     "from dotenv import load_dotenv\n",
     "import os, sys, math\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import pandas as pd  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
