--- a/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
@@ -11,7 +11,7 @@
     "import geopandas as gpd  # type: ignore\n",
     "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
