--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "import pandas as pd  # type: ignore\n",
     "import numpy as np\n",
