--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import pandas as pd  # type: ignore\n",
     "import os, sys\n",
     "\n",
