making linter happy

--- a/src/Ergot/importErgot.ipynb
+++ b/src/Ergot/importErgot.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ErgotQueryBuilder import ErgotQueryBuilder\n",
+    "from ErgotQueryBuilder import ErgotQueryBuilder  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import os, sys, math\n",
     "import sqlalchemy as sq  # type: ignore\n",
