--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
     "from Shared.DataService import DataService"
    ]
   },
