--- a/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb
@@ -10,11 +10,11 @@
     "import xarray as xr\n",
     "import geopandas as gpd  # type: ignore\n",
     "\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq  # type: ignore\n",
     "import sys\n",
-    "import pandas as pd\n",
+    "import pandas as pd  # type: ignore\n",
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
