--- a/src/Models/ml_models.ipynb
+++ b/src/Models/ml_models.ipynb
@@ -11,13 +11,16 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# sklearn\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
-    "from sklearn.model_selection import KFold, StratifiedKFold\n",
-    "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.linear_model import LogisticRegression  # type:ignore\n",
+    "from sklearn.ensemble import (\n",
+    "    RandomForestClassifier,\n",
+    "    GradientBoostingClassifier,\n",
+    ")  # type:ignore\n",
+    "from sklearn.tree import DecisionTreeClassifier  # type:ignore\n",
+    "from sklearn.svm import SVC, LinearSVC  # type:ignore\n",
+    "from sklearn.model_selection import KFold, StratifiedKFold  # type:ignore\n",
+    "from sklearn.metrics import f1_score  # type:ignore\n",
+    "from sklearn.metrics import roc_curve, auc  # type:ignore\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -98,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_models_kfold(X: np.array, y: np.array, numOfFolds: int) -> None:\n",
+    "def evaluate_models_kfold(X: np.ndarray, y: np.ndarray, numOfFolds: int) -> None:\n",
     "    kf = KFold(\n",
     "        n_splits=numOfFolds\n",
     "    )  # we need to modify it to make sure the outliers dont fall into 1 bin\n",
@@ -125,7 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_models_stratifiedKFold(X: np.array, y: np.array, numOfFolds: int) -> None:\n",
+    "def evaluate_models_stratifiedKFold(\n",
+    "    X: np.ndarray, y: np.ndarray, numOfFolds: int\n",
+    ") -> None:\n",
     "    kf = StratifiedKFold(\n",
     "        n_splits=numOfFolds, random_state=None, shuffle=False\n",
     "    )  # we need to modify it to make sure the outliers dont fall into 1 bin\n",
