--- a/src/Models/ml_models.ipynb
+++ b/src/Models/ml_models.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "# sklearn\n",
     "from sklearn.linear_model import LogisticRegression  # type:ignore\n",
-    "from sklearn.ensemble import (\n",
+    "from sklearn.ensemble import (  # type:ignore\n",
     "    RandomForestClassifier,\n",
     "    GradientBoostingClassifier,\n",
-    ")  # type:ignore\n",
+    ")\n",
     "from sklearn.tree import DecisionTreeClassifier  # type:ignore\n",
     "from sklearn.svm import SVC, LinearSVC  # type:ignore\n",
     "from sklearn.model_selection import KFold, StratifiedKFold  # type:ignore\n",
@@ -58,11 +58,7 @@
     "        model = model_dict[model_type](random_state=random_state, max_depth=max_depth)\n",
     "    else:\n",
     "        model = model_dict[model_type](random_state=random_state)\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "# def evaluate_model(dataset, arg, model_type):\n",
-    "#     f1_score = 0"
+    "    return model"
    ]
   },
   {
@@ -190,34 +186,6 @@
    "source": [
     "evaluate_models_kfold(X, y, 5)"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Leave one out cross validation"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
