--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -18,7 +18,13 @@
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService\n",
     "\n",
-    "from Datasets.DataCreation import getDatasetV1, getWeatherData_v1, getDatasetV2"
+    "from Datasets.DataCreation import (\n",
+    "    getDatasetV1,\n",
+    "    getWeatherData_v1,\n",
+    "    getDatasetV2,\n",
+    "    getSoilData,\n",
+    "    getDatasetV3,\n",
+    ")"
    ]
   },
   {
@@ -68,6 +74,23 @@
     "dataset_v2 = getDatasetV2(m)\n",
     "dataset_v2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v3 = getDatasetV3(None)\n",
+    "v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
