--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -24,6 +24,7 @@
     "    getDatasetV2,\n",
     "    getSoilData,\n",
     "    getDatasetV3,\n",
+    "    getDatasetV4,\n",
     ")"
    ]
   },
@@ -90,18 +91,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# Dataset V4"
+    "dataset_v4 = getDatasetV4(None)\n",
+    "dataset_v4"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
