--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -423,7 +423,7 @@
     "\n",
     "    try:\n",
     "        results = sq.text(queryBuilder.tableExistsReq(TABLENAME))\n",
-    "        tableExists = queryBuilder.readTableExists(db.execute(results))  # type: ignore\n",
+    "        tableExists = queryBuilder.readTableExists(db.execute(results))\n",
     "\n",
     "        if not tableExists:\n",
     "            createAggErgotTable(db)\n",
@@ -467,7 +467,7 @@
     "\n",
     "    try:\n",
     "        results = sq.text(queryBuilder.tableExistsReq(TABLENAMEV2))\n",
-    "        tableExists = queryBuilder.readTableExists(db.execute(results))  # type: ignore\n",
+    "        tableExists = queryBuilder.readTableExists(db.execute(results))\n",
     "\n",
     "        if not tableExists:\n",
     "            createAggErgotTable(db)\n",
