--- a/src/Ergot/importErgot.ipynb
+++ b/src/Ergot/importErgot.ipynb
@@ -81,6 +81,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def checkAttributes(data: pd.DataFrame, expectedCols: list):\n",
+    "    for col in expectedCols:  # For each of the expected columns\n",
+    "        if not col in data.keys():  # check if its in the dataframe\n",
+    "            print(f\"[ERROR] ergot sample file is missing the expected attribute: {col}\")\n",
+    "            sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkTable(db: DataService, queryHandler: ErgotQueryBuilder):\n",
+    "    # Checks if the table needed to run the pipeline has been created, if not creates it\n",
+    "\n",
+    "    # Create the command needed to check if the table exists\n",
+    "    query = sq.text(queryHandler.tableExistsReq(TABLENAME))\n",
+    "    tableExists = queryHandler.readTableExists(db.execute(query))  # type: ignore\n",
+    "\n",
+    "    if not tableExists:\n",
+    "        # Create the command needed to create the table\n",
+    "        query = sq.text(queryHandler.createErgotSampleTableReq())\n",
+    "        db.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dropExtraAttributes(data: pd.DataFrame, requiredCol: list):\n",
+    "    attributesToDrop = []  # Stores the extra attributes we wish to drop\n",
+    "\n",
+    "    for attr in data.keys():  # For each attribute in the dataframe\n",
+    "        if attr not in requiredCol:  # Check if its one of the attributes we want\n",
+    "            attributesToDrop.append(attr)\n",
+    "\n",
+    "    for attr in attributesToDrop:  # Drop all unnecessary attributes\n",
+    "        data.drop(attr, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def main():\n",
     "    # Holds the ergot data to import\n",
     "    ergotSamples = pd.read_csv(f\"./data/{FILENAME}.csv\")\n",
@@ -189,55 +238,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def checkAttributes(data: pd.DataFrame, expectedCols: list):\n",
-    "    for col in expectedCols:  # For each of the expected columns\n",
-    "        if not col in data.keys():  # check if its in the dataframe\n",
-    "            print(f\"[ERROR] ergot sample file is missing the expected attribute: {col}\")\n",
-    "            sys.exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def checkTable(db: DataService, queryHandler: ErgotQueryBuilder):\n",
-    "    # Checks if the table needed to run the pipeline has been created, if not creates it\n",
-    "\n",
-    "    # Create the command needed to check if the table exists\n",
-    "    query = sq.text(queryHandler.tableExistsReq(TABLENAME))\n",
-    "    tableExists = queryHandler.readTableExists(db.execute(query))  # type: ignore\n",
-    "\n",
-    "    if not tableExists:\n",
-    "        # Create the command needed to create the table\n",
-    "        query = sq.text(queryHandler.createErgotSampleTableReq())\n",
-    "        db.execute(query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dropExtraAttributes(data: pd.DataFrame, requiredCol: list):\n",
-    "    attributesToDrop = []  # Stores the extra attributes we wish to drop\n",
-    "\n",
-    "    for attr in data.keys():  # For each attribute in the dataframe\n",
-    "        if attr not in requiredCol:  # Check if its one of the attributes we want\n",
-    "            attributesToDrop.append(attr)\n",
-    "\n",
-    "    for attr in attributesToDrop:  # Drop all unnecessary attributes\n",
-    "        data.drop(attr, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
@@ -245,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -259,9 +259,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
