--- a/src/Model/KNN.ipynb
+++ b/src/Model/KNN.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "import sys\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split # type: ignore\n",
-    "from sklearn.preprocessing import StandardScaler # type: ignore\n",
-    "from sklearn.neighbors import KNeighborsClassifier # type: ignore\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix # type: ignore\n",
-    "from imblearn.over_sampling import RandomOverSampler # type: ignore\n",
+    "from sklearn.model_selection import train_test_split  # type: ignore\n",
+    "from sklearn.preprocessing import StandardScaler  # type: ignore\n",
+    "from sklearn.neighbors import KNeighborsClassifier  # type: ignore\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix  # type: ignore\n",
+    "from imblearn.over_sampling import RandomOverSampler  # type: ignore\n",
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3 # type: ignore"
+    "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3  # type: ignore"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = getDatasetV3(None)\n",
+    "df = getDatasetV2(None)\n",
     "print(df.duplicated().sum())\n",
     "df.drop_duplicates(inplace=True)\n",
     "df.drop(columns=[\"year\", \"district\"], inplace=True)"
@@ -46,8 +46,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns=[\"incidence\"])\n",
-    "y = df[\"incidence\"]"
+    "# X = df.drop(columns=[\"incidence\"])\n",
+    "# y = df[\"incidence\"]\n",
+    "\n",
+    "X = df.drop(columns=[\"has_ergot\"])\n",
+    "y = df[\"has_ergot\"]"
    ]
   },
   {
@@ -182,8 +185,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "plt.plot(range(1, 36), score)"
    ]
   }
