Dataset satellite soil ergot

--- a/src/Datasets/DatasetJS.ipynb
+++ b/src/Datasets/DatasetJS.ipynb
@@ -67,12 +67,112 @@
     "    # pulling weather station data from the database\n",
     "    weatherDataQuery = sq.text(\n",
     "        \"\"\"\n",
-    "        SELECT * FROM public.agg_weather_combined\n",
+    "        SELECT * FROM public.agg_day_copernicus_satellite_data\n",
     "        \"\"\"\n",
     "    )\n",
     "\n",
     "    return pd.read_sql(weatherDataQuery, conn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pullSoilMoistureData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    # pulling weather station data from the database\n",
+    "    weatherDataQuery = sq.text(\n",
+    "        \"\"\"\n",
+    "        SELECT year, month, day, district, \n",
+    "        soil_moisture_min, soil_moisture_max, soil_moisture_mean\n",
+    "        FROM public.agg_soil_moisture\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    return pd.read_sql(weatherDataQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pullAggErgotData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    # pulling weather station data from the database\n",
+    "    weatherDataQuery = sq.text(\n",
+    "        \"\"\"\n",
+    "        SELECT year, district, \n",
+    "            present_prev1, \n",
+    "            present_prev2, \n",
+    "            present_prev3, \n",
+    "            sum_severity_prev1, \n",
+    "            sum_severity_prev2, \n",
+    "            sum_severity_prev3, \n",
+    "            percnt_true_prev1,\n",
+    "            percnt_true_prev2,\n",
+    "            percnt_true_prev3,\n",
+    "            median_prev1,\n",
+    "            median_prev2,\n",
+    "            median_prev3\n",
+    "        FROM public.agg_ergot_sample_v2\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    return pd.read_sql(weatherDataQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pullIndividualErgotSampleData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    # pulling weather station data from the database\n",
+    "    weatherDataQuery = sq.text(\n",
+    "        \"\"\"\n",
+    "        SELECT * FROM public.ergot_sample_feat_eng\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    return pd.read_sql(weatherDataQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDailySatSoilErgot() -> pd.DataFrame:\n",
+    "    \n",
+    "    TABLENAME = \"dataset_daily_sat_soil_ergot\"\n",
+    "\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
+    "    satelliteDf = pullWeatherCopernicusData(conn)\n",
+    "    soilDf = pullSoilMoistureData(conn)\n",
+    "    aggErgotDf = pullAggErgotData(conn)\n",
+    "    ergotDf = pullIndividualErgotSampleData(conn)\n",
+    "\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
