--- a/src/models/classifiers.ipynb
+++ b/src/models/classifiers.ipynb
@@ -10,6 +10,7 @@
     "from sklearn.svm import SVC, LinearSVC \n",
     "from evaluator import ModelEvaluator\n",
     "import sys, warnings\n",
+    "import pandas as pd\n",
     "\n",
     "sys.path.append('../')\n",
     "from datasets.setCreator import SetCreator\n",
@@ -62,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testWithErgotFeatures(predictor, dataset):\n",
+    "def testWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
     "    print('Running the Random Forest Classifier:')\n",
     "    print(f'Predicting: {predictor}\\n\\n')\n",
     "    numExcludedSets = 0\n",
@@ -105,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testWithoutErgotFeatures(predictor, dataset):\n",
+    "def testWithoutErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
     "    print('Running the Random Forest Classifier:')\n",
     "    print(f'Predicting: {predictor}\\n\\n')\n",
     "    numExcludedSets = 0\n",
@@ -227,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVMLinearWithErgotFeatures(predictor, dataset):\n",
+    "def SVMLinearWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
     "    print('Running linear SVM Classifier:')\n",
     "    print(f'Predicting: {predictor}\\n\\n')\n",
     "    numExcludedSets = 0\n",
@@ -268,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVMPolyWithErgotFeatures(predictor, dataset):\n",
+    "def SVMPolyWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
     "    print('Running poly kernal SVM Classifier:')\n",
     "    print(f'Predicting: {predictor}\\n\\n')\n",
     "    numExcludedSets = 0\n",
@@ -311,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVMRBFWithErgotFeatures(predictor, dataset):\n",
+    "def SVMRBFWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
     "    print('Running RBF SVM Classifier:')\n",
     "    print(f'Predicting: {predictor}\\n\\n')\n",
     "    numExcludedSets = 0\n",
