--- a/src/models/dimReduction.ipynb
+++ b/src/models/dimReduction.ipynb
@@ -47,7 +47,6 @@
    "outputs": [],
    "source": [
     "for currData in dataset1:\n",
-    "    currData['train'] = currData['train'].fillna(0)\n",
     "    pca = PCA()\n",
     "    pca.fit_transform(currData['train'])\n",
     "    \n",
@@ -110,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run it exactly once"
+    "runs it exactly once"
    ]
   },
   {
